%% SPDX-License-Identifier: Apache-2.0
%% Copyright 2026 Norviq Contributors
classDiagram
    class AssetGraphBuilder {
      +add_agent(spiffe_id, agent_class, namespace, trust_score)
      +add_tool(tool_name, namespace)
      +add_data(data_uri, data_type, sensitivity)
      +record_tool_call(spiffe_id, tool_name, decision, namespace, agent_class)
      +record_data_access(tool_name, data_uri, access_type)
      +record_delegation(from_agent, to_agent, depth)
      +to_dict() dict
      +from_dict(data) None
    }
    class GraphNode {
      +id: str
      +type: NodeType
      +label: str
      +properties: dict
    }
    class GraphEdge {
      +source: str
      +target: str
      +type: EdgeType
      +properties: dict
    }
    AssetGraphBuilder --> GraphNode
    AssetGraphBuilder --> GraphEdge
